<resources>
    <string name="LOADING">Loading…</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Zu Peshawar</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arrivals">Arrivals :\9\9</string>
    <string name="bicycle_returned">Bicycle Returned</string>
    <string name="bicycle_unlocked">Bicycle Unlocked</string>
    <string name="block">Block</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bulleted_list">\10\10 • Login to Easypaisa app -&gt; Tap on top-left menu to approve the payment in My Approvals ( with in 1 min ).\10 • Telenor customers: Input your 5-digit PIN into the USSD prompt.\10 </string>
    <string name="bulleted_list_jazz">\10\10 • Login to JAZZ app -&gt; Tap on top-left menu to approve the payment in My Approvals ( with in 1 min ).\10 • JAZZ customers: Input your 5-digit PIN into the USSD prompt.\10 </string>
    <string name="card_balance">Card Number</string>
    <string name="change_date">Change Date</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_top_up_option">Choose top up option</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">00000000000000000000000000000000</string>
    <string name="coming_soon">Coming Soon !!!</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="current_balance">Current Balance</string>
    <string name="customactivityoncrash_error_activity_close_app">Close app</string>
    <string name="customactivityoncrash_error_activity_error_details">Error details</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">Error information</string>
    <string name="customactivityoncrash_error_activity_error_details_close">Close</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">Copied to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">Copy to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_title">Error details</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">An unexpected error occurred.\10Sorry for the inconvenience.</string>
    <string name="customactivityoncrash_error_activity_restart_app">Restart app</string>
    <string name="cycle_unlock_step_1">Scan QR code from the Bicycle dock as shown above</string>
    <string name="cycle_unlock_step_2">After scanning QR, un dock the bicycle and enjoy your ride</string>
    <string name="cycle_unlock_step_3">To return bike, take it to dock, and make sure bicycle is locked properly.</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_progressbar">Default Progressbar:</string>
    <string name="default_web_client_id">83141890996-rphds12l79ui076ih0ba8igonldddnhl.apps.googleusercontent.com</string>
    <string name="desc_stations">Destination Stations</string>
    <string name="destination">Destination :\9\9</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="enterAmount">Enter the amount</string>
    <string name="enter_amount">Please Enter Amount</string>
    <string name="error_icon_content_description">Error</string>
    <string name="esmt_fare">Est.Fare</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://zu-peshawar.firebaseio.com</string>
    <string name="gcm_defaultSenderId">83141890996</string>
    <string name="google_api_key">AIzaSyDOPW4pcROkqpRG2-Rydp-_MV9uce_Xe-o</string>
    <string name="google_app_id">1:83141890996:android:206874bc02da6f1f8958e1</string>
    <string name="google_crash_reporting_api_key">AIzaSyDOPW4pcROkqpRG2-Rydp-_MV9uce_Xe-o</string>
    <string name="google_storage_bucket">zu-peshawar.appspot.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="label_Bicycle">Bicycle</string>
    <string name="label_Bicycle_coc">Bicycle Code of Conduct</string>
    <string name="label_Bicycle_fare">Bicycle Fare</string>
    <string name="label_Bicycle_reg">Bicycle Registration</string>
    <string name="label_EnterPincode">Enter 6 digit OTP code sent at</string>
    <string name="label_beta">Bicycle</string>
    <string name="label_busArrival">Bus Arrival</string>
    <string name="label_busschedulePolicy">Bus Schedule</string>
    <string name="label_card_number">ZU Card Number</string>
    <string name="label_card_recharge">Zu Card Services</string>
    <string name="label_changeLanguage">Change Language</string>
    <string name="label_checkingUserData">Checking User Database !</string>
    <string name="label_codeNotRecieved">Code not recieved?</string>
    <string name="label_code_of_conduct">Code of Conduct</string>
    <string name="label_complaints">Complaints</string>
    <string name="label_creditDebitCard">Credit/Debit Card</string>
    <string name="label_currentBalance">Current Balance</string>
    <string name="label_dateOfBirth">Date of Birth</string>
    <string name="label_email">Email</string>
    <string name="label_languageChange">You can switch between languages Urdu and English.</string>
    <string name="label_memberSince">Package Start</string>
    <string name="label_name">Name</string>
    <string name="label_notification">Notification</string>
    <string name="label_notificationChange">By turning On, you will recieve push notifications for any alert or upcoming announcement.</string>
    <string name="label_notification_setting">Notifications Setting</string>
    <string name="label_packageExpiry">Package Expiry</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="label_recentSearch">Recent Search</string>
    <string name="label_refundableSecurity">Refundable Security</string>
    <string name="label_searchResults">Search Results</string>
    <string name="label_terms_and_conditions">Terms &amp; Conditions</string>
    <string name="label_totalBalance">Total Balance</string>
    <string name="label_zuBicycle">Zu Bicycle</string>
    <string name="origin_stations">Origin Stations</string>
    <string name="routes_changes">Routes Changes</string>
    <string name="txt_btn_account">Account</string>
    <string name="txt_btn_logout">Logout</string>
    <string name="txt_hint_searchStation">Search Stations Name ...</string>
</resources>