<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:sweet="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/lightColor" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="30dp" android:textColor="@color/colorBlack" android:gravity="center" android:id="@+id/title" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_18sdp" android:layout_marginTop="30dp" android:text="Setting" android:fontFamily="@font/psr"/>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/_25sdp" android:layout_below="@+id/title">
        <TextView android:textSize="@dimen/_10sdp" android:textColor="@color/lightTextColor" android:gravity="start" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/_5sdp" android:text="@string/label_notification_setting" android:textAllCaps="true" android:fontFamily="@font/psr"/>
        <androidx.appcompat.widget.SwitchCompat android:theme="@style/SwitchChangeTheme" android:textSize="@dimen/_12sdp" android:id="@+id/notificationSwitch" android:background="@color/colorWhite" android:paddingLeft="16dp" android:paddingTop="@dimen/_10sdp" android:paddingRight="16dp" android:paddingBottom="@dimen/_10sdp" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_5sdp" android:layout_marginBottom="@dimen/_10sdp" android:text="@string/label_notification" android:fontFamily="@font/psr"/>
        <TextView android:textSize="@dimen/_10sdp" android:textColor="@color/lightTextColor" android:gravity="start" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/_10sdp" android:text="@string/label_notificationChange" android:fontFamily="@font/psr"/>
        <androidx.appcompat.widget.SwitchCompat android:theme="@style/SwitchChangeTheme" android:textSize="@dimen/_12sdp" android:id="@+id/changeLan_SW" android:background="@color/colorWhite" android:paddingLeft="16dp" android:paddingTop="@dimen/_10sdp" android:paddingRight="16dp" android:paddingBottom="@dimen/_10sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_5sdp" android:text="@string/label_changeLanguage" android:fontFamily="@font/psr"/>
        <TextView android:textSize="@dimen/_10sdp" android:textColor="@color/lightTextColor" android:gravity="start" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:layout_marginBottom="@dimen/_5sdp" android:text="@string/label_languageChange" android:fontFamily="@font/psr"/>
        <LinearLayout android:orientation="vertical" android:background="@color/colorWhite" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_5sdp">
            <com.google.android.material.button.MaterialButton android:textSize="@dimen/_12sdp" android:textColor="@color/colorBlack" android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/termsAndConditionBtm" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/label_terms_and_conditions" android:textAllCaps="false" android:fontFamily="@font/psr" sweet:backgroundTint="@color/colorWhite" sweet:rippleColor="@color/colorWhite" style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>
            <View android:background="@color/lightColor" android:layout_width="match_parent" android:layout_height="1.5dp" android:layout_marginLeft="@dimen/_10sdp" android:layout_marginRight="@dimen/_10sdp"/>
            <com.google.android.material.button.MaterialButton android:textSize="@dimen/_12sdp" android:textColor="@color/colorBlack" android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/privacyPolicy" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/label_privacy_policy" android:textAllCaps="false" android:fontFamily="@font/psr" sweet:backgroundTint="@color/colorWhite" sweet:rippleColor="@color/colorWhite" style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>
        </LinearLayout>
        <TextView android:textSize="@dimen/_10sdp" android:textColor="@color/lightTextColor" android:gravity="start" android:id="@+id/termsAndCondition" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_25sdp" android:layout_marginBottom="@dimen/_5sdp" android:text="@string/txt_btn_account" android:textAllCaps="true" android:fontFamily="@font/psr"/>
        <com.google.android.material.button.MaterialButton android:textSize="@dimen/_12sdp" android:textColor="@color/colorBlack" android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/logout_btn" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="match_parent" android:layout_height="@dimen/_50sdp" android:text="@string/txt_btn_logout" android:textAllCaps="false" android:fontFamily="@font/psr" sweet:backgroundTint="@color/colorWhite" sweet:rippleColor="@color/colorWhite" style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>
    </LinearLayout>
</RelativeLayout>
