<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:sweet="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView android:id="@+id/arrowImg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_arrow_up_down_svgrepo_com" android:contentDescription="@string/app_name" sweet:layout_constraintBottom_toBottomOf="@+id/destinationStationValueTv" sweet:layout_constraintStart_toStartOf="0" sweet:layout_constraintTop_toTopOf="@+id/originStationValueTv"/>
    <TextView android:textSize="14sp" android:id="@+id/originCentersTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/origin_stations" android:layout_marginStart="@dimen/_10sdp" sweet:layout_constraintStart_toEndOf="@+id/arrowImg" sweet:layout_constraintTop_toTopOf="0"/>
    <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="@color/colorBlack" android:id="@+id/originStationValueTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_5sdp" android:text="Moterway1" sweet:layout_constraintStart_toStartOf="@+id/originCentersTv" sweet:layout_constraintTop_toBottomOf="@+id/originCentersTv"/>
    <TextView android:textSize="14sp" android:id="@+id/destinationStationTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp" android:text="@string/desc_stations" android:layout_marginStart="@dimen/_10sdp" sweet:layout_constraintStart_toEndOf="@+id/arrowImg" sweet:layout_constraintTop_toBottomOf="@+id/originStationValueTv"/>
    <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="@color/colorBlack" android:id="@+id/destinationStationValueTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_5sdp" android:text="Moterway1" sweet:layout_constraintStart_toStartOf="@+id/destinationStationTv" sweet:layout_constraintTop_toBottomOf="@+id/destinationStationTv"/>
    <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/colorBlack" android:id="@+id/routeChange" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_5sdp" android:text="0" sweet:layout_constraintStart_toEndOf="@+id/arrowImg" sweet:layout_constraintTop_toBottomOf="@+id/destinationStationValueTv"/>
    <TextView android:textSize="14sp" android:textColor="@color/colorBlack" android:id="@+id/routesChagesTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/routes_changes" android:layout_marginStart="@dimen/_10sdp" sweet:layout_constraintBottom_toBottomOf="@+id/routeChange" sweet:layout_constraintStart_toEndOf="@+id/routeChange" sweet:layout_constraintTop_toTopOf="@+id/routeChange"/>
    <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/colorBlack" android:id="@+id/routesChangestimeValueTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_5sdp" android:text="00:45" android:layout_marginStart="@dimen/_5sdp" sweet:layout_constraintStart_toEndOf="@+id/routesChagesTv" sweet:layout_constraintTop_toBottomOf="@+id/destinationStationValueTv"/>
    <TextView android:textSize="14sp" android:id="@+id/esmtFaretv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_5sdp" android:layout_marginRight="@dimen/_5sdp" android:text="@string/esmt_fare" android:layout_marginEnd="@dimen/_10sdp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintTop_toTopOf="@+id/routesChangestimeValueTv"/>
    <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/colorBlack" android:id="@+id/esmtFareValueTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Rs. 45" android:layout_marginEnd="@dimen/_10sdp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintTop_toBottomOf="@+id/esmtFaretv"/>
    <View android:background="@color/colorGrey" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="@dimen/_5sdp" android:layout_marginBottom="@dimen/_10sdp" sweet:layout_constraintBottom_toBottomOf="0" sweet:layout_constraintTop_toBottomOf="@+id/esmtFareValueTv"/>
</androidx.constraintlayout.widget.ConstraintLayout>
